force-app/main/default/objects/FinancialAccount__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>