force-app/main/default/objects/FinancialAccount__c/fields/AccountOpenedOn__c.field-meta.xml
<CustomField>
    <fullName>AccountOpenedOn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Opened On</label>
    <type>Date</type>
</CustomField>