force-app/main/default/objects/FinancialAccount__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>갇倆企伂佐가각</fullName>
                <isActive>false</isActive>
                <label>갇倆企伂佐가각</label>
            </value>
            <value>
                <fullName>갇倆企伂佒가각</fullName>
                <isActive>false</isActive>
                <label>갇倆企伂佒가각</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>