force-app/main/default/objects/FinancialAccount__c/fields/ActivityStatusUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityStatusUpdateDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Status Update Date</label>
    <type>Date</type>
</CustomField>