force-app/main/default/objects/FinancialAccount__c/fields/CeaseActivityDate__c.field-meta.xml
<CustomField>
    <fullName>CeaseActivityDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cease Activity Date</label>
    <type>Date</type>
</CustomField>