force-app/main/default/objects/FinancialAccount__c/fields/FullBranchNumber__c.field-meta.xml
<CustomField>
    <fullName>FullBranchNumber__c</fullName>
    <formula>AccountNumber__c +&apos;-&apos;+ Branch__r.BranchNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Branch Number</label>
    <type>Text</type>
</CustomField>