force-app/main/default/objects/FinancialAccount__c/fields/ResponsibleEmployee__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FinancialAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>