force-app/main/default/objects/FinancialAccount__c/fields/SignatureComponentCode__c.field-meta.xml
<CustomField>
    <fullName>SignatureComponentCode__c</fullName>
    <label>Signature Component Code</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>