force-app/main/default/objects/FinancialAccount__c/fields/SignatureComponents__c.field-meta.xml
<CustomField>
    <fullName>SignatureComponents__c</fullName>
    <label>Signature Components</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hand Signature</fullName>
            </value>
            <value>
                <fullName>Automatically generated</fullName>
            </value>
            <value>
                <fullName>갇倆企伂佑가각</fullName>
                <isActive>false</isActive>
                <label>갇倆企伂佑가각</label>
            </value>
            <value>
                <fullName>갇倆企伂体가각</fullName>
                <isActive>false</isActive>
                <label>갇倆企伂体가각</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>