force-app/main/default/objects/FinancialAccount__c/fields/SignatureComponentsDescription__c.field-meta.xml
<CustomField>
    <fullName>SignatureComponentsDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signature Components Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>