force-app/main/default/objects/FinancialAccount__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>